# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  05 Aug 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Added a fix from bug 142855 for issues arising if KBUILD_OUTPUT is set.
  
  04 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Added a new revision of vmware-player and vmware-workstation-tools (5.5) for
  testing.  The new revisions of both fully utilize the vmware eclass, so they
  should end up much easier to maintain in the future.  They have not been
  tested, but looking at what they are actually doing, they should work
  perfectly, since support for all of their code was already in the eclass.

  04 Aug 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Updated the patch for vmware-modules to use any kernel path, rather than
  just /usr/src/linux, with a new patch courtesy of Alon Bar-Lev
  (see bug 137422).
  
  31 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Fixing up quoting issues in the eclasses.  Might have gone overboard in
  the vmware.eclass, but at least it won't sting us in the tail if we 
  add a space in later for any reason...
  
  28 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Fixing up quoting issues in the eclasses, kindly pointed out by phreak``.
  
  27 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Fix up basic repoman failings, in preparation for merging with the main tree...
  
  17 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Thanks to the eagle eyes of Cardoe, we now have a dependency in the vmware
  eclass for the update-mime-info tool.  That should get inheritted automatically
  by every ebuild, so this should fix it for all our packages.
  
  14 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Fixed up the LONGNAME/SHORTNAME issue when using the vmware-any-any init
  script.  Also added patch 009 to the workstation-4.5 patchset.
  
  14 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog: